# stock-analyzer

./: .env  .env.example  .gitignore  PORTFOLIO_ANALYZER_SPEC.md  README.md  elangovan.csv  global-ira.csv  global-ira.numbers  p_org.csv  portfolio.csv  portfolio.json  pyproject.toml  requirements.txt  stock-analyzer.spec
.github/workflows/: release.yml
cache/: FXAIX.json  QQQ.json  SCHD.json  VOO.json  VOOG.json  VXUS.json
output/: report-1.html  report.html  report.json
src/: calculator.py  fetcher.py  main.py  models.py  news.py  reporter.py  validator.py
tests/: test_calculator.py  test_validator.py
