[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "stock-analyzer"
version = "1.0.0"
description = "Analyze portfolio stock exposure across ETFs, mutual funds, and direct holdings"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "yfinance>=0.2.40",
]

[project.scripts]
stock-analyzer = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
